objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age</description>
        <formula>(TODAY() - DOB__c)/365.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>Employees DOB</description>
        <label>DOB</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emp_id__c</fullName>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Emp_id</label>
        <type>AutoNumber</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <recordTypes>
        <fullName>Employee</fullName>
        <active>true</active>
        <label>Employee record type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>